# nvidia-video-codec-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  nvEncodeAPI.h  rustfmt.toml  wrapper.h
.github/workflows/: clippy.yml  docs.yml  fmt.yml  lints.yml
examples/: full.rs  importing_vulkan_buffers.rs
src/: cuviddec.rs  lib.rs  nvcuvid.rs  nvencodeapi.rs
src/safe/: api.rs  buffer.rs  builders.rs  encoder.rs  mod.rs  result.rs  session.rs
src/sys/: bindgen.sh  cuviddec.rs  guid.rs  mod.rs  nvEncodeAPI.rs  nvcuvid.rs  version.rs
src/sys/headers/: nvEncodeAPI.h
src/sys/linux_sys/: bindgen.sh  cuviddec.rs  mod.rs  nvEncodeAPI.rs  nvcuvid.rs
src/sys/stubs/: nvEncodeAPI.c  nvcuvid.c
src/sys/windows_sys/: bindgen.ps1  cuviddec.rs  mod.rs  nvEncodeAPI.rs  nvcuvid.rs
tests/: blanks.rs
