[package]
name = "nvidia-video-codec-sdk"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = "0.9.9"
lazy_static = "1.4.0"

[dev-dependencies]
vulkano = "0.33.0"
